# githw

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.app  Dockerfile.web  candle.cpp  candle.h  configmap.yaml  docker-compose.yml  entrypoint.sh  main.cpp  nginx.conf  test-repo-chart-0.1.0.tgz  tests.cpp
.github/workflows/: cmake-single-platform.yml  docker-web-tests.yml
helm/test-repo-chart/templates/: _helpers.tpl  hpa.yaml  ingress.yaml  service.yaml  web-deployment.yaml
test-repo-chart/: Chart.yaml  values.yaml
test-repo-chart/templates/: NOTES.txt  app-deployment.yaml  deployment.yaml  pvc.yaml  serviceaccount.yaml  web-service.yaml
test-repo-chart/templates/tests/: test-connection.yaml
